added apk file link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Welcome</title>
   </head>
   <body>
-    <a href="">Start Planning</a>
+    <a
+      href="https://github.com/aday12/D424-Capstone/blob/main/app-debug-androidTest.apk"
+      >Start Planning</a
+    >
   </body>
 </html>
