--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Welcome</title>
   </head>
   <body>
-    <a
-      href="https://github.com/aday12/D424-Capstone/blob/main/app-debug-androidTest.apk"
-      >Start Planning</a
-    >
+    <a href="https://github.com/aday12/D424-Capstone">Start Planning</a>
   </body>
 </html>
