--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Welcome</title>
   </head>
   <body>
-    <a
-      href="https://github.com/aday12/D424-Capstone/blob/main/app-debug-androidTest.apk"
+    <a href="https://github.com/aday12/D424-Capstone/blob/main/app-release.apk"
       >Start Planning</a
     >
   </body>
